//
//  MyFoodiesUITests.swift
//  MyFoodiesUITests
//
//  Created by Aroshini Dissanayake on 2023-06-15.
//

import XCTest

final class MyFoodiesUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        let app = XCUIApplication()
        app.launch()
        app.buttons["Get Started"].tap()
        
        let tabBar = app.tabBars["Tab Bar"]
        tabBar.buttons["Add"].tap()
        tabBar.buttons["Home"].tap()
        tabBar.buttons["person"].tap()
        tabBar.buttons["Show Map"].tap()
        
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
